# HoloCubic_AIO

./: .gitignore  HoloCubic小电视──小白避坑指南v2.1.md  HoloCubic小电视──小白避坑指南v2.3.md  Q&A.md  README.md  README_English.md  manage.py  update_log.md  硬件版本说明.md
AIO_Firmware_PIO/: AIO_Firmware_PIO.code-workspace  partitions-no-ota.csv  platformio.ini  readme.md
AIO_Firmware_PIO/lib/ArduinoUZlib/src/: ArduinoUZlib.cpp  ArduinoUZlib.h  CMakeLists.txt  defl_static.c  makefile  makefile.b32  makefile.dj2  makefile.dmc  makefile.mgw  makefile.vc  makefile.wat
AIO_Firmware_PIO/lib/ArduinoUZlib/src/nasm/: crc32.nas  nasmlcm.inc  tinfzlib.nas
AIO_Firmware_PIO/src/: HoloCubic_AIO.cpp  MyMQTT.cpp  MyMQTT.h  common.cpp  common.h  config.cpp  config.h  message.cpp  message.h  network.cpp
AIO_Tool/: .gitignore  CubicAIO_Tool.py  README.md  cubictool.json
AIO_Tool/page/: download_debug.py  filemanager.py  help.py  images_converter.py  setting.py  videotool.py
AIO_Tool/tool_esptoolpy/: .piopm  cubic_tool.py  package.json
AIO_Tool/util/: common.py  tkutils.py  (+5 more)
Docs/: HoloCubic_AIO结构.xmind  PC资源监控(PC resource)配置教程.doc
HoloCubic_Firmware/: .gitignore  partitions-no-ota.csv  platformio.ini
Tool/: CubicAIO_Tool.py  CubicAIO_Tool.spec  README.md  __pycache__ - 快捷方式.lnk  common.py  convertor_core.py  download_debug.py  get_holo.py  help.py  imagechange.py  imagetrans.py  massagehead.py  setting.py  tfmanager.py  tkutils.py  video_player_tool.py  videotool.py  widget_base.py
lv_simulater_platformio/: .gitignore  README.md  platformio.ini
放置到内存卡/: README.md  hefeng_rename.py  wifi.txt
(+1613 files in other folders)
